--- a/package.json
+++ b/package.json
@@ -12,20 +12,31 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.14",
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.12.1",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@vitalets/google-translate-api": "^9.2.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
+    "bcrypt": "^5.1.1",
     "google-translate-api-browser": "^5.0.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "pose-viewer": "^0.7.4",
+    "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "react-webcam": "^7.2.0",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
