--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/dom-speech-recognition": "^0.0.4",
     "@vitalets/google-translate-api": "^9.2.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
+    "agora-rtc-react": "^2.1.0",
     "bcrypt": "^5.1.1",
     "google-translate-api-browser": "^5.0.0",
     "next": "14.1.4",
