--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 DATABASE_URL="postgres://postgres.nwbjifgkmrkclxarhves:Kay10942198!@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 PUBLIC_AGORA_APP_ID=30b40a778db944049147ac4d7b07ab6c
 PUBLIC_BASE_URL=https://us-central1-sign-mt.cloudfunctions.net
-PUBLIC_SUGGEST_TEXT_URL=https://textgears-textgears-v1.p.rapidapi.com/grammar
-PUBLIC_SUGGEST_KEY=cd15ff346dmsh5da8bdf9c1679e1p148ce6jsn55ffa8ac11eb
 PUBLIC_APP_ID=104446925
 PUBLIC_SERVER_SECRET=c26a952693d05a7c0e2dca3c69a7e5a1
-PUBLIC_NEXTAUTH_SECRET=wLN7XGGc/T22Chv3lSyu6ldx3q9aUO1nJG5rPD8Xb4Y=
 PUBLIC_CLIENT_ID=688470173590-iic9kqv3fno3u2vgf6c5hj6edetqmpr1.apps.googleusercontent.com
 PUBLIC_CLIENT_SECRET=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
 PUBLIC_GITHUB_ID=973f8def8d265f229cea
 PUBLIC_GITHUB_SECRET=84bb9404c9e9579eb40cb7ee122c6f499c9369da
+NEXT_PUBLIC_RAPIDAPI_KEY=cd15ff346dmsh5da8bdf9c1679e1p148ce6jsn55ffa8ac11eb
+NEXT_PUBLIC_RAPIDAPI_HOST=microsoft-translator-text.p.rapidapi.com
+NEXTAUTH_SECRET=Fq08i/a4UzpaqAkjYKmB5g7GpjYD82dMUEpMgka3PZM=
