--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.14",
     "@mui/material-nextjs": "^5.15.11",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@types/dom-speech-recognition": "^0.0.4",
     "@vitalets/google-translate-api": "^9.2.0",
@@ -27,12 +27,12 @@
     "bcrypt": "^5.1.1",
     "google-translate-api-browser": "^5.0.0",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
     "pose-viewer": "^0.7.4",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-toastify": "^10.0.5",
     "react-webcam": "^7.2.0",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
