--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ PUBLIC_GITHUB_SECRET=84bb9404c9e9579eb40cb7ee122c6f499c9369da
 NEXT_PUBLIC_RAPIDAPI_KEY=cd15ff346dmsh5da8bdf9c1679e1p148ce6jsn55ffa8ac11eb
 NEXT_PUBLIC_RAPIDAPI_HOST=microsoft-translator-text.p.rapidapi.com
 NEXTAUTH_SECRET=Fq08i/a4UzpaqAkjYKmB5g7GpjYD82dMUEpMgka3PZM=
+NEXT_PUBLIC_ASSEMBLY_API_KEY=1028c953f91f4e9bbf6ba15bb1e5cbd5
