--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "dependencies": {
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
+    "@google-cloud/speech": "^6.5.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.14",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.14",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.17",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-charts": "^7.4.0",
+    "@mui/x-data-grid": "^7.4.0",
+    "@mui/x-date-pickers": "^7.4.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@types/dom-speech-recognition": "^0.0.4",
     "@vitalets/google-translate-api": "^9.2.0",
     "@zegocloud/zego-uikit-prebuilt": "^2.0.1",
     "agora-rtc-react": "^2.1.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
     "google-translate-api-browser": "^5.0.0",
     "next": "14.1.4",
     "pose-viewer": "^0.7.4",
@@ -38,7 +43,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
